# dormant

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  ROADMAP.md  STRUCTURE.md  _typos.toml  deny.toml  dist-workspace.toml  lefthook.yml  renovate.json  resolve.py  taplo.toml
crates/dormant-core/: Cargo.toml
crates/dormant-core/proptest-regressions/: state_machine.txt
crates/dormant-core/src/: coordination.rs  doctor.rs  error.rs  fakes.rs  ipc_proto.rs  lib.rs  observation.rs  ownership.rs  paths.rs  peers.rs  reload.rs  rules.rs  state_machine.rs  traits.rs  types.rs  wear.rs  zone.rs
crates/dormant-core/src/config/: defaults.rs  mod.rs  schema.rs  validate.rs
crates/dormant-core/tests/: rules_end_to_end.rs
crates/dormant-core/tests/fixtures/: kvm_full.toml
crates/dormant-core/tests/fixtures/config/: bad_mode_for_controller.toml  cycle.toml  missing_credential_ref.toml  unknown_key.toml  valid_full.toml
crates/dormant-displays/: Cargo.toml
crates/dormant-displays/src/: blank_owner.rs  command.rs  ddc_lock.rs  ddcci.rs  executor.rs  gamma_breadcrumb.rs  ha_passthrough.rs  kwin_dpms.rs  lib.rs  macos_display_catalog.rs  macos_display_sleep.rs  macos_gamma_black.rs  macos_power.rs  registry.rs  samsung_ip.rs  samsung_tizen.rs  test_support.rs  vcp_ops.rs
crates/dormant-displays/src/fixtures/: aoc-ag326uzd-mac.edid
crates/dormant-doctor/: Cargo.toml
crates/dormant-doctor/src/: draft.rs  lib.rs  service.rs  types.rs
crates/dormant-doctor/src/probes/: config.rs  ddcci.rs  ha.rs  macos_display_catalog.rs  macos_display_sleep.rs  macos_idle.rs  macos_power.rs  mod.rs  mqtt.rs  samsung.rs  usb.rs
crates/dormant-render/: Cargo.toml
crates/dormant-render/examples/: smoke_black.rs
crates/dormant-render/src/: command.rs  latch.rs  lib.rs  playlist.rs  screensaver.rs  settings.rs  shift.rs  stub.rs
crates/dormant-render/src/linux/: blend.rs  connection.rs  mod.rs  state.rs  surface.rs  thread.rs  wayland_ops.rs
crates/dormant-sensors/: Cargo.toml
crates/dormant-sensors/fixtures/: ha_auth_flow.json  ha_subscribe_entities_event.json  z2m_availability.json  z2m_snzb03_pir.json  z2m_snzb06p.json
crates/dormant-sensors/src/: backoff.rs  ha_ws.rs  lib.rs  mqtt.rs  registry.rs  usb_ld2410.rs
crates/dormant-sensors/tests/: mqtt_integration.rs
crates/dormant-tray/: Cargo.toml  build.rs
crates/dormant-tray/assets/: dormant-tray.desktop
crates/dormant-tray/examples/: macos_status_spike.rs
crates/dormant-tray/share/: com.legionworks.dormant-tray.plist
crates/dormant-tray/src/: action_table.rs  dispatch.rs  icon.rs  ipc_loop.rs  lib.rs  main.rs  menu.rs  state.rs  template_icon.rs  tooltip.rs  tray.rs  tray_macos.rs  tray_state.rs
crates/dormant-tray/systemd/: dormant-tray.service
crates/dormant-tray/tests/: event_pump_shutdown.rs  ipc_roundtrip.rs
crates/dormant-web/: Cargo.toml
crates/dormant-web/src/: assets.rs  config_patch.rs  error.rs  lib.rs  security.rs  server.rs  state.rs  test_support.rs
crates/dormant-web/src/routes/: command.rs  config.rs  config_apply.rs  daemon.rs  doctor.rs  events.rs  mod.rs  operations.rs  pair.rs  pair_dormant.rs  wear.rs
crates/dormant-web/webui/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
crates/dormant-web/webui/scripts/: workspace-version.ts
crates/dormant-web/webui/src/: App.tsx  ds.css  index.css  main.tsx  vite-env.d.ts
crates/dormant-web/webui/src/__tests__/: AudioSection.test.tsx  Config.test.tsx  ConfigForm.test.tsx  ConfirmDialog.test.tsx  CreateEntityForm.test.tsx  Dashboard.test.tsx  DashboardV2.test.tsx  DisplayDetail.test.tsx  Displays.test.tsx  DisplaysSection.test.tsx  Doctor.test.tsx  DormantPairing.test.tsx  EmergencyWakeControl.test.tsx  Events.test.tsx  ExerciseRunner.test.tsx  FailureBanner.test.tsx  GlobalBanners.p2-colors.test.ts  LadderEditor.test.tsx  NotificationsSection.test.tsx  PairingWizard.test.tsx  RulesSection.test.tsx  ScreensaverEditor.test.tsx  SensorsSection.test.tsx  SettingsForm-crud.test.tsx  Shell.p0-colors.test.ts  Shell.test.tsx  ShellV2.test.tsx  SidebarFooter.test.tsx  StatusChip.test.tsx  StringListField.test.tsx  WatchdogSection.test.tsx  WearCard.test.tsx  WearHeatMap.test.tsx  WearSettingsForm.test.tsx  ZonesSection.test.tsx  client-apply.test.ts  client-pair.test.ts  client.test.ts  configPatch.test.ts  entityCrud.test.ts  (+7 more)
crates/dormant-web/webui/src/__tests__/fixtures/: live-state.ts  sample-data.ts
crates/dormant-web/webui/src/api/: client.ts  types.ts  ws.ts
crates/dormant-web/webui/src/app/: Shell.css  Shell.tsx  nav.tsx  state.tsx
crates/dormant-web/webui/src/app/components/: Card.css  Card.tsx  ConfirmDialog.css  ConfirmDialog.tsx  EmergencyWakeControl.tsx  ExerciseRunner.css  ExerciseRunner.tsx  FailureBanner.css  FailureBanner.tsx  GlobalBanners.css  (+14 more)
crates/dormantctl/: Cargo.toml
crates/dormantctl/src/: client.rs  cmd_blank.rs  cmd_doctor.rs  cmd_emergency_wake.rs  cmd_launchd.rs  cmd_pair.rs  cmd_pause.rs  cmd_status.rs  cmd_validate.rs  cmd_watch.rs  lib.rs  main.rs
crates/dormantctl/tests/: pair_instance_redaction.rs
crates/dormantd/: Cargo.toml
crates/dormantd/share/: com.legionworks.dormant.plist
crates/dormantd/src/: app.rs  audio_policy.rs  audio_source.rs  boot.rs  boot_guard.rs  coordination_frame.rs  coordination_mdns.rs  coordination_pairing.rs  coordination_poll.rs  gamma_recovery.rs  idle_source.rs  inhibit_activity.rs  inhibit_audio.rs  ipc.rs  lib.rs  logging.rs  macos_idle.rs  main.rs  main_sequence.rs  notifier.rs  reload.rs  sd_notify.rs  single_instance.rs  watchdog_schedule.rs  wear_tracker.rs
crates/dormantd/systemd/: dormant.service
crates/dormantd/tests/: boot_rollback.rs  daemon_smoke.rs  ipc_roundtrip.rs  web_config_apply.rs
crates/dormantd/tests/fixtures/pw_dump/: README.md  call.json  idle.json  idle_dirty.json  mic_only.json  movie.json  movie_paused.json  music.json  role_missing.json  unknown_state.json
crates/dormantd/tests/support/: app_paths.rs
(+142 files in other folders)
