[workspace]
resolver = "2"
members = [
  "crates/dormant-core",
  "crates/dormant-sensors",
  "crates/dormant-displays",
  "crates/dormantd",
  "crates/dormantctl",
  "crates/dormant-doctor",
  "crates/dormant-render",
  "crates/dormant-web",
  "crates/dormant-tray",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/legion-works/dormant"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
toml_edit = "0.25"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
humantime = "2"
humantime-serde = "1"
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
zbus = "5"
indexmap = { version = "2", features = ["serde"] }
tokio-stream = "0.1"
proptest = "1"
rumqttc = "0.24"
futures-util = "0.3"
tokio-serial = "5"
ddc-hi = "0.4"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
notify = "7"
sha2 = "0.10"
tempfile = "3"
rand = "0.8"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
