[package]
name = "dormant-core"
version.workspace = true
description = "Core domain types, config, rules, and state machines for dormant."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
ed25519-dalek = { workspace = true, features = ["rand_core", "zeroize"] }
getrandom.workspace = true
humantime-serde.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time", "rt", "macros"] }
tokio-util.workspace = true
toml.workspace = true
toml_edit.workspace = true
tracing.workspace = true

[dev-dependencies]
dormant-core = { path = ".", features = ["test-fakes"] }
proptest.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }

[features]
test-fakes = []
render = []

[lib]

[[test]]
name = "rules_end_to_end"
required-features = ["test-fakes"]
