[package]
name = "dormant-displays"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]

[dependencies]
dormant-core = { path = "../dormant-core" }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
base64 = "0.22"
rustls = { version = "0.23", default-features = false, features = [
  "ring",
  "tls12",
] }
rcgen = { version = "0.14", features = ["pem", "ring"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
ddc-hi = { workspace = true }

[features]
# Enables the rcgen-based TLS handshake integration test.
# Off by default so CI keeps the dep footprint lean.
rcgen-test = ["dep:rcgen"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "time", "macros", "rt"] }
wiremock = "0.6"
tokio-rustls = "0.26"
