[package]
name = "dormant-displays"
version.workspace = true
description = "Display-controller implementations and fallback execution for dormant."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]

[dependencies]
dormant-core = { path = "../dormant-core" }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
base64 = "0.22"
rustls = { version = "0.23", default-features = false, features = [
  "ring",
  "tls12",
] }
rcgen = { version = "0.14", features = ["pem", "ring"], optional = true }

# ddc-hi is cross-platform by construction (its own Cargo.toml gates the
# ddc-i2c backend to Linux/Windows and the ddc-macos backend to macOS via
# target-cfg'd optional deps) -- Linux uses I2C-dev, macOS resolves through
# the vendored, path-patched `ddc-macos` fork pinned in the workspace root
# `[patch.crates-io]` (see vendor/ddc-macos/README.dormant.md).
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
ddc-hi = { workspace = true }

[features]
# Enables the rcgen-based TLS handshake integration test.
# Off by default so CI keeps the dep footprint lean.
rcgen-test = ["dep:rcgen"]
# Exposes `test_support` (scripted fakes, e.g. `FakePairConnect`) so other
# workspace crates' tests (e.g. dormant-web's pairing wizard) can inject
# them without touching real hardware or network. Off by default — prod
# builds never compile this module.
test-util = []

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "time", "macros", "rt"] }
wiremock = "0.6"
tokio-rustls = "0.26"
tempfile = { workspace = true }
