[package]
name = "dormant-doctor"
version.workspace = true
description = "Hardware and connectivity probes for dormant sensors, displays, and credentials."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]

[dependencies]
dormant-core = { path = "../dormant-core" }
dormant-sensors = { path = "../dormant-sensors" }
dormant-displays = { path = "../dormant-displays" }
tokio = { workspace = true }
futures-util = "0.3"
rumqttc = { workspace = true }
tokio-tungstenite = { workspace = true }
indexmap = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
tokio-serial = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["test-util", "time", "macros", "rt"] }

tempfile.workspace = true
