[package]
name = "dormant-doctor"
version.workspace = true
description = "Hardware and connectivity probes for dormant sensors, displays, and credentials."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]

[dependencies]
dormant-core = { path = "../dormant-core" }
async-trait = { workspace = true }
dormant-sensors = { path = "../dormant-sensors" }
dormant-displays = { path = "../dormant-displays" }
tokio = { workspace = true }
futures-util = "0.3"
rumqttc = { workspace = true }
tokio-tungstenite = { workspace = true }
indexmap = { workspace = true }
tracing = { workspace = true }

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
tokio-serial = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["test-util", "time", "macros", "rt"] }

tempfile.workspace = true

# `TestPty` (crates/dormant-doctor/src/probes/usb.rs) opens a real Unix PTY
# pair via `libc::openpty` to prove `probe_usb`'s serial I/O path end to end
# against a genuine byte stream — no new PTY crate, direct dev-only use of
# the workspace `libc` binding (already a normal dependency elsewhere in
# this workspace, e.g. `dormantd`, `dormant-render`).
[target.'cfg(unix)'.dev-dependencies]
libc = { workspace = true }
