[package]
name = "dormant-sensors"
version.workspace = true
description = "Sensor-source implementations for MQTT, Home Assistant, and USB mmWave presence input."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]

[dependencies]
dormant-core = { path = "../dormant-core" }
rumqttc = "0.24"
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-tungstenite = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
indexmap = { workspace = true }
gethostname = "0.5"
fastrand = "2"
futures-util = "0.3"
tokio-serial = { workspace = true }
