[package]
name = "dormant-tray"
description = "KDE StatusNotifierItem tray applet for monitoring and controlling dormantd."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[[bin]]
name = "dormant-tray"
path = "src/main.rs"

[dependencies]
dormant-core = { path = "../dormant-core" }
dormantctl = { path = "../dormantctl" }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
ksni = "0.3"
tokio = { workspace = true, features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "time",
  "sync",
  "io-util",
  "net",
] }
tokio-util = { workspace = true }

[build-dependencies]
resvg = "0.47"
png = "0.18"

[dev-dependencies]
dormant-core = { path = "../dormant-core", features = ["test-fakes"] }
dormantctl = { path = "../dormantctl" }
dormantd = { path = "../dormantd" }
tempfile = { workspace = true }
tokio = { workspace = true, features = [
  "test-util",
  "macros",
  "rt",
  "rt-multi-thread",
  "time",
] }

[package.metadata.dist]
dist = true
