[package]
name = "dormant-tray"
version.workspace = true
description = "KDE StatusNotifierItem tray applet for monitoring and controlling dormantd."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[[bin]]
name = "dormant-tray"
path = "src/main.rs"

[dependencies]
dormant-core = { path = "../dormant-core" }
dormantctl = { path = "../dormantctl" }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
tokio = { workspace = true, features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "time",
  "sync",
  "io-util",
  "net",
] }
tokio-util = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
ksni = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "=0.6.4"
objc2-app-kit = { version = "=0.3.2", default-features = false, features = [
  "NSApplication",
  "NSRunningApplication",
  "NSResponder",
  "NSStatusBar",
  "NSStatusItem",
  "NSStatusBarButton",
  "NSButton",
  "NSControl",
  "NSView",
  "NSMenu",
  "NSMenuItem",
  "NSImage",
  "NSEvent",
  "NSGraphicsContext",
  "objc2-core-foundation",
] }
objc2-foundation = { version = "=0.3.2", default-features = false, features = [
  "NSObject",
  "NSString",
  "NSData",
  "NSGeometry",
] }
dispatch2 = { version = "=0.3.1", default-features = false, features = [
  "alloc",
] }
png = "0.18"

[build-dependencies]
resvg = "0.47"
png = "0.18"

[dev-dependencies]
dormant-core = { path = "../dormant-core", features = ["test-fakes"] }
dormantctl = { path = "../dormantctl" }
dormantd = { path = "../dormantd" }
async-trait = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = [
  "test-util",
  "macros",
  "rt",
  "rt-multi-thread",
  "time",
] }

[package.metadata.dist]
dist = true
include = [
  "systemd/dormant-tray.service",
  "share/com.legionworks.dormant-tray.plist",
]
