[package]
name = "dormant-web"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]

[dependencies]
dormant-core = { path = "../dormant-core" }
dormant-doctor = { path = "../dormant-doctor" }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "set-header", "cors"] }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
mime_guess = "2"
futures-util = "0.3"

[dev-dependencies]
indexmap = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = [
  "test-util",
  "time",
  "macros",
  "rt-multi-thread",
] }
