[package]
name = "dormantctl"
version.workspace = true
description = "CLI and IPC client library for controlling and diagnosing dormant."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[[bin]]
name = "dormantctl"
path = "src/main.rs"

[dependencies]
dormant-core = { path = "../dormant-core" }
dormant-displays = { path = "../dormant-displays" }
dormant-doctor = { path = "../dormant-doctor" }
dormant-sensors = { path = "../dormant-sensors" }
clap = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
libc = { workspace = true }
humantime = "2"
comfy-table = "7"
rumqttc = { workspace = true }
tokio-util = { workspace = true }
tokio-serial = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = "0.3"

[features]
default = ["render"]
render = ["dormant-core/render"]

[package.metadata.dist]
dist = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
