[package]
name = "dormantd"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[[bin]]
name = "dormantd"
path = "src/main.rs"

[dependencies]
dormant-core = { path = "../dormant-core" }
dormant-sensors = { path = "../dormant-sensors" }
dormant-displays = { path = "../dormant-displays" }
dormant-doctor = { path = "../dormant-doctor" }
dormant-web = { path = "../dormant-web", optional = true }
dormant-render = { path = "../dormant-render", optional = true }
clap = { workspace = true }
notify = { workspace = true }
zbus = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
[target.'cfg(target_os = "linux")'.dependencies]
wayland-client = { version = "0.31", features = ["system"] }
wayland-protocols = { version = "0.32", features = [
  "staging",
  "client",
  "wayland-client",
] }
rustix = { version = "1", default-features = false, features = [
  "event",
  "std",
] }

[features]
web-ui = ["dep:dormant-web"]
render = ["dep:dormant-render", "dormant-core/render"]

[dev-dependencies]
dormant-core = { path = "../dormant-core", features = ["test-fakes"] }
dormant-doctor = { path = "../dormant-doctor" }
indexmap = { workspace = true }
tokio = { workspace = true, features = [
  "test-util",
  "macros",
  "rt",
  "rt-multi-thread",
  "time",
] }
tempfile = { workspace = true }

[package.metadata.dist]
dist = true
