[package]
name = "dormantd"
version.workspace = true
description = "Daemon binary for proximity-driven display blanking and wake control."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[[bin]]
name = "dormantd"
path = "src/main.rs"

[dependencies]
dormant-core = { path = "../dormant-core" }
dormant-sensors = { path = "../dormant-sensors" }
dormant-displays = { path = "../dormant-displays" }
dormant-doctor = { path = "../dormant-doctor" }
dormant-web = { path = "../dormant-web", optional = true }
dormant-render = { path = "../dormant-render", optional = true }
clap = { workspace = true }
notify = { workspace = true }
zbus = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
[target.'cfg(target_os = "linux")'.dependencies]
wayland-client = { version = "0.31", features = ["system"] }
wayland-protocols = { version = "0.32", features = [
  "staging",
  "client",
  "wayland-client",
] }
rustix = { version = "1", default-features = false, features = [
  "event",
  "std",
] }

[features]
web-ui = ["dep:dormant-web"]
render = ["dep:dormant-render", "dormant-core/render"]
# Exposes cfg(test)-only test seams (currently `SdNotify::from_socket_for_test`)
# to the crate's OWN external integration tests (`tests/daemon_smoke.rs`),
# which link the library WITHOUT `--cfg test` (only the lib's own unittest
# build gets that). Enabled solely via the self dev-dependency below; never
# a production feature.
test-util = []

[dev-dependencies]
async-trait = { workspace = true }
dormant-core = { path = "../dormant-core", features = ["test-fakes"] }
dormant-doctor = { path = "../dormant-doctor" }
dormantctl = { path = "../dormantctl" }
dormantd = { path = ".", features = ["test-util"] }
indexmap = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
  "test-util",
  "macros",
  "rt",
  "rt-multi-thread",
  "time",
] }
tempfile = { workspace = true }

[package.metadata.dist]
dist = true
# Stage the checked-in launchd agent plist into every archive at
# share/com.legionworks.dormant.plist — the SAME bytes `dormantctl launchd
# install` embeds via include_bytes! (crates/dormantctl/src/cmd_launchd.rs),
# so the archived file and the installed file are provably identical.
include = ["share/com.legionworks.dormant.plist"]
# Printed by the shell installer on success. Tells operators the next step
# without running anything on their behalf: neither `dormantctl launchd
# install` nor `launchctl bootstrap` is safe to run unattended (it would
# silently start a background daemon the operator hasn't configured yet).
install-success-msg = "dormantd installed. On macOS, run `dormantctl launchd install` and then `launchctl bootstrap gui/$UID \"$HOME/Library/LaunchAgents/com.legionworks.dormant.plist\"` to start it at login."
